added $ symbol to currency

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <div class="dashboard-panel">
                       <div class="panel-upper">
                             <h5>REVENUE</h5>
-                            <h1 class="data-main">$<span id="mainRevenue"></span></h1>
+                            <h1 class="data-main"><span id="mainRevenue"></span></h1>
                             <p class="data-comparison brand-col">
                                 <span id="comRevenue"></span>
                             </p>
